--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(254 147 0);
+    background-color: white;
     color: white;
     font-family: Arial;
     position: fixed;
